--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -23,7 +23,7 @@
     "@uniswap/v2-sdk": "^3.0.1",
     "blo": "^1.0.1",
     "daisyui": "^3.5.1",
-    "next": "^13.1.6",
+    "next": "13.4.6",
     "nextjs-progressbar": "^0.0.16",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
