--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
+    "@pcd/eddsa-ticket-pcd": "^0.3.0",
     "@pcd/pcd-types": "^0.8.0",
     "@pcd/semaphore-identity-pcd": "^0.8.0",
     "@pcd/semaphore-signature-pcd": "^0.8.0",
+    "@pcd/zk-eddsa-event-ticket-pcd": "^0.2.1",
     "@rainbow-me/rainbowkit": "1.1.2",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
@@ -33,13 +35,19 @@
     "react-hot-toast": "^2.4.0",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.7.2",
+    "uuid": "^9.0.1",
     "viem": "^1.16.6",
     "wagmi": "1.4.4",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/chai": "^4.3.10",
+    "@types/circomlibjs": "^0.1.6",
+    "@types/jest": "^29.5.8",
     "@types/json-bigint": "^1.0.4",
+    "@types/lodash": "^4.14.201",
+    "@types/mocha": "^10.0.4",
     "@types/node": "^17.0.35",
     "@types/pako": "^2.0.3",
     "@types/qr-image": "^3.2.9",
